fix: 修复 start.bat 批处理文件括号解析问题
- 移除复杂的 Java 版本检测代码，导致批处理解析错误
- 简化 start.bat 启动脚本
- 更新 DatabaseConfigDialog 使用正确的当前工作目录

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>