@@ -6,6 +6,7 @@ import java.awt.event.*;
 import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
+import java.sql.*;
 
 /**
  * Database Configuration Dialog
@@ -21,6 +22,7 @@ public class DatabaseConfigDialog {
     private JPasswordField passField;
     private JButton saveButton;
     private JButton testButton;
+    private JButton cancelButton;
 
     public static void main(String[] args) {
         try {
@@ -34,7 +36,7 @@ public class DatabaseConfigDialog {
     public void show() {
         frame = new JFrame("LiSuan - Database Configuration");
         frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-        frame.setSize(500, 400);
+        frame.setSize(550, 450);
         frame.setLocationRelativeTo(null);
         frame.setResizable(false);
 
@@ -57,55 +59,62 @@ public class DatabaseConfigDialog {
 
         // Database Type
         gbc.gridy = 1; gbc.gridwidth = 1;
+        gbc.anchor = GridBagConstraints.WEST;
         mainPanel.add(new JLabel("Database Type:"), gbc);
-        gbc.gridx = 1;
+        gbc.gridx = 1; gbc.weightx = 1.0;
         dbTypeCombo = new JComboBox<>(new String[]{"Local MySQL", "Docker MySQL", "Remote MySQL"});
         dbTypeCombo.addActionListener(e -> updateFields());
         mainPanel.add(dbTypeCombo, gbc);
 
         // Host
-        gbc.gridx = 0; gbc.gridy = 2;
+        gbc.gridx = 0; gbc.gridy = 2; gbc.weightx = 0;
         mainPanel.add(new JLabel("Host:"), gbc);
-        gbc.gridx = 1;
+        gbc.gridx = 1; gbc.weightx = 1.0;
         hostField = new JTextField("localhost", 20);
         mainPanel.add(hostField, gbc);
 
         // Port
-        gbc.gridx = 0; gbc.gridy = 3;
+        gbc.gridx = 0; gbc.gridy = 3; gbc.weightx = 0;
         mainPanel.add(new JLabel("Port:"), gbc);
-        gbc.gridx = 1;
+        gbc.gridx = 1; gbc.weightx = 1.0;
         portField = new JTextField("3306", 20);
         mainPanel.add(portField, gbc);
 
         // Database Name
-        gbc.gridx = 0; gbc.gridy = 4;
+        gbc.gridx = 0; gbc.gridy = 4; gbc.weightx = 0;
         mainPanel.add(new JLabel("Database:"), gbc);
-        gbc.gridx = 1;
+        gbc.gridx = 1; gbc.weightx = 1.0;
         dbNameField = new JTextField("lisuan_system", 20);
         mainPanel.add(dbNameField, gbc);
 
         // Username
-        gbc.gridx = 0; gbc.gridy = 5;
+        gbc.gridx = 0; gbc.gridy = 5; gbc.weightx = 0;
         mainPanel.add(new JLabel("Username:"), gbc);
-        gbc.gridx = 1;
+        gbc.gridx = 1; gbc.weightx = 1.0;
         userField = new JTextField("root", 20);
         mainPanel.add(userField, gbc);
 
         // Password
-        gbc.gridx = 0; gbc.gridy = 6;
+        gbc.gridx = 0; gbc.gridy = 6; gbc.weightx = 0;
         mainPanel.add(new JLabel("Password:"), gbc);
-        gbc.gridx = 1;
-        passField = new JPasswordField("RootPassword123!", 20);
+        gbc.gridx = 1; gbc.weightx = 1.0;
+        passField = new JPasswordField("", 20);
         mainPanel.add(passField, gbc);
 
         // Buttons
         JPanel buttonPanel = new JPanel(new FlowLayout(FlowLayout.RIGHT, 10, 10));
+        cancelButton = new JButton("Cancel");
         testButton = new JButton("Test Connection");
         saveButton = new JButton("Save & Start");
 
+        cancelButton.addActionListener(e -> {
+            frame.dispose();
+            System.exit(0);
+        });
         testButton.addActionListener(e -> testConnection());
         saveButton.addActionListener(e -> saveAndStart());
 
+        buttonPanel.add(cancelButton);
         buttonPanel.add(testButton);
         buttonPanel.add(saveButton);
 
@@ -113,7 +122,7 @@ public class DatabaseConfigDialog {
         mainPanel.add(buttonPanel, gbc);
 
         // Info label
-        JLabel infoLabel = new JLabel("<html><center>Configure LiSuan database connection.<br>For Docker MySQL, make sure Docker is running.</center></html>");
+        JLabel infoLabel = new JLabel("<html><center>Configure LiSuan database connection.<br>For first-time setup, the database will be created automatically.</center></html>");
         infoLabel.setForeground(Color.GRAY);
         gbc.gridy = 8;
         mainPanel.add(infoLabel, gbc);
@@ -158,7 +167,6 @@ public class DatabaseConfigDialog {
     }
 
     private void testConnection() {
-        String type = (String) dbTypeCombo.getSelectedItem();
         String host = hostField.getText().trim();
         String port = portField.getText().trim();
         String dbName = dbNameField.getText().trim();
@@ -166,7 +174,7 @@ public class DatabaseConfigDialog {
         String pass = new String(passField.getPassword());
 
         if (host.isEmpty() || user.isEmpty()) {
-            showMessage("Please fill in all required fields", JOptionPane.WARNING_MESSAGE);
+            showMessage("Please fill in Host and Username fields", JOptionPane.WARNING_MESSAGE);
             return;
         }
 
@@ -174,36 +182,38 @@ public class DatabaseConfigDialog {
         try {
             Class.forName("com.mysql.cj.jdbc.Driver");
         } catch (ClassNotFoundException e) {
-            showMessage("MySQL JDBC driver not found!\n\nMake sure you're running from the complete distribution package.", JOptionPane.ERROR_MESSAGE);
+            showMessage("MySQL JDBC driver not found!\n\nPlease ensure the application is built.", JOptionPane.ERROR_MESSAGE);
             return;
         }
 
         // Test actual database connection
-        java.sql.Connection conn = null;
-        java.sql.Statement stmt = null;
+        Connection conn = null;
+        Statement stmt = null;
         try {
             String dbUrl = String.format("jdbc:mysql://%s:%s/?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true",
                     host, port);
-            conn = java.sql.DriverManager.getConnection(dbUrl, user, pass);
+            conn = DriverManager.getConnection(dbUrl, user, pass);
 
             // Check if database exists
             stmt = conn.createStatement();
-            java.sql.ResultSet rs = stmt.executeQuery("SELECT SCHEMA_NAME FROM INFORMATION_SCHEMA.SCHEMATA WHERE SCHEMA_NAME = '" + dbName + "'");
+            ResultSet rs = stmt.executeQuery("SELECT SCHEMA_NAME FROM INFORMATION_SCHEMA.SCHEMATA WHERE SCHEMA_NAME = '" + dbName + "'");
 
             StringBuilder message = new StringBuilder();
             message.append("Database connection successful!\n\n");
 
             if (rs.next()) {
+                int tableCount = getTableCount(conn, dbName);
                 message.append("Database '").append(dbName).append("' exists.");
+                message.append("\nTables: ").append(tableCount);
             } else {
                 message.append("Database '").append(dbName).append("' does not exist yet.\n");
-                message.append("It will be created automatically when you save the configuration.");
+                message.append("It will be created automatically when you save.");
             }
             rs.close();
 
             showMessage(message.toString(), JOptionPane.INFORMATION_MESSAGE);
 
-        } catch (java.sql.SQLException e) {
+        } catch (SQLException e) {
             String errorMsg = "Connection failed!\n\n";
             if (e.getMessage().contains("Communications link failure")) {
                 errorMsg += "Could not connect to MySQL server.\n";
@@ -218,13 +228,22 @@ public class DatabaseConfigDialog {
             }
             showMessage(errorMsg, JOptionPane.ERROR_MESSAGE);
         } finally {
-            try { if (stmt != null) stmt.close(); } catch (Exception e) { System.err.println("Error: " + e.getMessage()); }
-            try { if (conn != null) conn.close(); } catch (Exception e) { System.err.println("Error: " + e.getMessage()); }
+            try { if (stmt != null) stmt.close(); } catch (Exception e) { /* ignore */ }
+            try { if (conn != null) conn.close(); } catch (Exception e) { /* ignore */ }
         }
     }
 
+    private int getTableCount(Connection conn, String dbName) throws SQLException {
+        try (Statement stmt = conn.createStatement();
+             ResultSet rs = stmt.executeQuery("SELECT COUNT(*) FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_SCHEMA = '" + dbName + "'")) {
+            if (rs.next()) {
+                return rs.getInt(1);
+            }
+        }
+        return 0;
+    }
+
     private void saveAndStart() {
-        String type = (String) dbTypeCombo.getSelectedItem();
         String host = hostField.getText().trim();
         String port = portField.getText().trim();
         String dbName = dbNameField.getText().trim();
@@ -232,64 +251,61 @@ public class DatabaseConfigDialog {
         String pass = new String(passField.getPassword());
 
         if (host.isEmpty() || port.isEmpty() || user.isEmpty()) {
-            showMessage("Please fill in all required fields", JOptionPane.WARNING_MESSAGE);
+            showMessage("Please fill in Host, Port, and Username fields", JOptionPane.WARNING_MESSAGE);
             return;
         }
 
-        // First test the connection
-        java.sql.Connection conn = null;
-        java.sql.Statement stmt = null;
+        saveButton.setEnabled(false);
+        testButton.setEnabled(false);
+
         try {
             Class.forName("com.mysql.cj.jdbc.Driver");
 
-            // Connect without specifying database
+            // Connect without specifying database first
             String dbUrl = String.format("jdbc:mysql://%s:%s/?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true",
                     host, port);
-            conn = java.sql.DriverManager.getConnection(dbUrl, user, pass);
-            stmt = conn.createStatement();
 
-            // Check if database exists
-            java.sql.ResultSet rs = stmt.executeQuery("SELECT SCHEMA_NAME FROM INFORMATION_SCHEMA.SCHEMATA WHERE SCHEMA_NAME = '" + dbName + "'");
-            boolean dbExists = rs.next();
-            rs.close();
+            // Check if database exists and create if needed
+            boolean dbExists;
+            boolean needsInit = false;
 
-            // Create database if it doesn't exist
-            if (!dbExists) {
-                stmt.execute("CREATE DATABASE " + dbName + " CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci");
+            try (Connection conn = DriverManager.getConnection(dbUrl, user, pass);
+                 Statement stmt = conn.createStatement()) {
+
+                ResultSet rs = stmt.executeQuery("SELECT SCHEMA_NAME FROM INFORMATION_SCHEMA.SCHEMATA WHERE SCHEMA_NAME = '" + dbName + "'");
+                dbExists = rs.next();
+                rs.close();
+
+                if (!dbExists) {
+                    // Create database
+                    stmt.execute("CREATE DATABASE " + dbName + " CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci");
+                    needsInit = true;
+                } else {
+                    // Check if tables exist
+                    rs = stmt.executeQuery("SELECT COUNT(*) FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_SCHEMA = '" + dbName + "'");
+                    if (rs.next() && rs.getInt(1) == 0) {
+                        needsInit = true;
+                    }
+                    rs.close();
+                }
             }
 
-        } catch (ClassNotFoundException e) {
-            showMessage("MySQL JDBC driver not found!", JOptionPane.ERROR_MESSAGE);
-            return;
-        } catch (java.sql.SQLException e) {
-            String errorMsg = "Database connection failed!\n\n";
-            if (e.getMessage().contains("Communications link failure")) {
-                errorMsg += "Could not connect to MySQL server.\n";
-                errorMsg += "Please check:\n";
-                errorMsg += "- MySQL is running on " + host + ":" + port + "\n";
-                errorMsg += "- Firewall is not blocking the connection";
-            } else if (e.getMessage().contains("Access denied")) {
-                errorMsg += "Authentication failed!\n";
-                errorMsg += "Please check your username and password.";
-            } else {
-                errorMsg += "Error: " + e.getMessage();
+            // Import initialization script if needed
+            if (needsInit) {
+                showMessage("Database is empty. Initializing...", JOptionPane.INFORMATION_MESSAGE);
+                if (!importInitScript(host, port, dbName, user, pass)) {
+                    showMessage("Database created but initialization script failed.\nThe database may need manual setup.\n\nConfiguration has been saved.", JOptionPane.WARNING_MESSAGE);
+                }
             }
-            showMessage(errorMsg, JOptionPane.ERROR_MESSAGE);
-            return;
-        } finally {
-            try { if (stmt != null) stmt.close(); } catch (Exception e) { System.err.println("Error: " + e.getMessage()); }
-            try { if (conn != null) conn.close(); } catch (Exception e) { System.err.println("Error: " + e.getMessage()); }
-        }
 
-        // Create config directory
-        Path configDir = Paths.get("config");
-        try {
+            // Create config directory
+            Path configDir = Paths.get("config");
             if (!Files.exists(configDir)) {
                 Files.createDirectories(configDir);
             }
 
             // Write database.properties
-            String dbUrl = String.format("jdbc:mysql://%s:%s/%s?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf8mb4",
+            String fullDbUrl = String.format("jdbc:mysql://%s:%s/%s?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf8mb4",
                     host, port, dbName);
 
             String config = String.format(
@@ -302,11 +318,11 @@ public class DatabaseConfigDialog {
                 "db.connection.timeout=30000\n" +
                 "db.idle.timeout=600000\n" +
                 "db.max.lifetime=1800000\n",
-                dbUrl, user, pass);
+                fullDbUrl, user, pass);
 
             Files.write(configDir.resolve("database.properties"), config.getBytes(StandardCharsets.UTF_8));
 
-            showMessage("Configuration saved successfully!\n\nDatabase '" + dbName + "' is ready.\n\nYou can now run the application.", JOptionPane.INFORMATION_MESSAGE);
+            showMessage("Configuration saved successfully!\n\nDatabase '" + dbName + "' is ready.\n\nYou can now run start.bat to launch the application.", JOptionPane.INFORMATION_MESSAGE);
 
             // Ask if user wants to start the application
             int option = JOptionPane.showConfirmDialog(frame,
@@ -321,43 +337,101 @@ public class DatabaseConfigDialog {
             frame.dispose();
             System.exit(0);
 
-        } catch (IOException e) {
-            showMessage("Failed to save configuration: " + e.getMessage(), JOptionPane.ERROR_MESSAGE);
+        } catch (ClassNotFoundException e) {
+            showMessage("MySQL JDBC driver not found!", JOptionPane.ERROR_MESSAGE);
+            saveButton.setEnabled(true);
+            testButton.setEnabled(true);
+        } catch (Exception e) {
+            String errorMsg = "Database operation failed!\n\n";
+            if (e instanceof SQLException) {
+                SQLException se = (SQLException) e;
+                if (se.getMessage().contains("Communications link failure")) {
+                    errorMsg += "Could not connect to MySQL server.\n";
+                    errorMsg += "Please check:\n";
+                    errorMsg += "- MySQL is running on " + host + ":" + port + "\n";
+                    errorMsg += "- Firewall is not blocking the connection";
+                } else if (se.getMessage().contains("Access denied")) {
+                    errorMsg += "Authentication failed!\n";
+                    errorMsg += "Please check your username and password.";
+                } else {
+                    errorMsg += "Error: " + se.getMessage();
+                }
+            } else {
+                errorMsg += "Error: " + e.getMessage();
+            }
+            showMessage(errorMsg, JOptionPane.ERROR_MESSAGE);
+            saveButton.setEnabled(true);
+            testButton.setEnabled(true);
+        }
+    }
+
+    private boolean importInitScript(String host, String port, String dbName, String user, String pass) {
+        File initScript = new File("docker/mysql-init/00-init-complete.sql");
+        if (!initScript.exists()) {
+            System.err.println("[WARN] Init script not found: " + initScript.getAbsolutePath());
+            return false;
+        }
+
+        try (Connection conn = DriverManager.getConnection(
+                String.format("jdbc:mysql://%s:%s/%s?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true",
+                    host, port, dbName), user, pass)) {
+
+            // Read and execute the script
+            StringBuilder sqlBuffer = new StringBuilder();
+            try (BufferedReader reader = new BufferedReader(new FileReader(initScript, StandardCharsets.UTF_8))) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    line = line.trim();
+                    // Skip empty lines and comments
+                    if (line.isEmpty() || line.startsWith("--") || line.startsWith("#")) {
+                        continue;
+                    }
+                    sqlBuffer.append(line).append("\n");
+
+                    // Execute on delimiter
+                    if (line.endsWith(";")) {
+                        String sql = sqlBuffer.toString();
+                        sqlBuffer.setLength(0);
+                        if (!sql.trim().isEmpty()) {
+                            try (Statement stmt = conn.createStatement()) {
+                                stmt.execute(sql);
+                            } catch (SQLException e) {
+                                // Some statements might fail if already exists, that's ok
+                                System.err.println("[WARN] SQL execution failed (may be ok): " + e.getMessage());
+                            }
+                        }
+                    }
+                }
+            }
+
+            return true;
+        } catch (Exception e) {
+            System.err.println("[ERROR] Failed to import init script: " + e.getMessage());
+            e.printStackTrace();
+            return false;
         }
     }
 
     private void startApplication() {
         try {
-            // Find the JAR file
-            File jarFile = null;
-            File currentDir = new File(".");
-            File[] files = currentDir.listFiles((dir, name) -> name.endsWith("-jar-with-dependencies.jar"));
+            // Get the current working directory
+            File currentDir = new File(System.getProperty("user.dir"));
+            File targetDir = new File(currentDir, "target");
+
+            // Find the JAR file in target directory
+            File[] files = targetDir.listFiles((dir, name) -> name.endsWith("-jar-with-dependencies.jar"));
 
             if (files != null && files.length > 0) {
-                jarFile = files[0];
-
-                // Build JavaFX module path
-                String m2Repo = System.getProperty("user.home") + "\\.m2\\repository\\org\\openjfx";
-                String modulePath = String.format(
-                    "%s\\javafx-base\\17.0.12;%s\\javafx-controls\\17.0.12;%s\\javafx-fxml\\17.0.12;%s\\javafx-graphics\\17.0.12",
-                    m2Repo, m2Repo, m2Repo, m2Repo);
-
-                // Build command
-                ProcessBuilder pb = new ProcessBuilder(
-                    "javaw",
-                    "-Xms512m",
-                    "-Xmx1024m",
-                    "-Dfile.encoding=UTF-8",
-                    "--module-path", modulePath,
-                    "--add-modules", "javafx.controls,javafx.fxml",
-                    "-jar", jarFile.getName()
-                );
-                pb.directory(new File("."));
-                pb.start();
-
-                showMessage("Application started!", JOptionPane.INFORMATION_MESSAGE);
+                // Try to run start.bat
+                File startBat = new File(currentDir, "start.bat");
+                if (startBat.exists()) {
+                    Runtime.getRuntime().exec("cmd /c start /wait start.bat", null, currentDir);
+                    showMessage("Application starting...", JOptionPane.INFORMATION_MESSAGE);
+                } else {
+                    showMessage("start.bat not found. Please run it manually.", JOptionPane.ERROR_MESSAGE);
+                }
             } else {
-                showMessage("Could not find application JAR file.", JOptionPane.ERROR_MESSAGE);
+                showMessage("Could not find application JAR file.\n\nExpected location: " + targetDir.getAbsolutePath() + "\n\nPlease run: mvn clean package", JOptionPane.ERROR_MESSAGE);
             }
         } catch (Exception e) {
             showMessage("Failed to start application: " + e.getMessage(), JOptionPane.ERROR_MESSAGE);
@@ -365,6 +439,6 @@ public class DatabaseConfigDialog {
     }
 
     private void showMessage(String message, int messageType) {
-        JOptionPane.showMessageDialog(frame, message, "LiSuan", messageType);
+        JOptionPane.showMessageDialog(frame, message, "LiSuan Database Configuration", messageType);
     }
 }
